// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewGrid render PreviewGrid loading 1`] = `
<div
  className="preview-grid"
>
  <span
    className=""
  >
    <i
      aria-hidden="true"
      className="fa fa-spinner fa-pulse"
    />
     
    Loading...
  </span>
</div>
`;

exports[`PreviewGrid render PreviewGrid with data 1`] = `
<div
  className="preview-grid"
>
  <p>
    Previewing first 3 rows and 4 of 5 columns.
  </p>
  <div
    className="table-responsive"
  >
    <div
      className="grid-messages"
    />
    <table
      className="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            className="grid-header-cell"
            draggable={false}
            id="Name"
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              {
                "minWidth": undefined,
              }
            }
            title="Contains a short name for this data object
If not provided, a unique name will be generated from the expression:
null (Name)"
          >
            Name
          </th>
          <th
            className="grid-header-cell"
            draggable={false}
            id="Flag"
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              {
                "minWidth": undefined,
              }
            }
            title="Contains a reference to a user-editable comment about this row (Flag)"
          >
            Flag
          </th>
          <th
            className="grid-header-cell"
            draggable={false}
            id="mixtureTypeId"
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              {
                "minWidth": undefined,
              }
            }
            title="mixtureTypeId"
          >
            Mixture Type
          </th>
          <th
            className="grid-header-cell"
            draggable={false}
            id="expirationTime"
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              {
                "minWidth": undefined,
              }
            }
            title="The expiration period in days. (expirationTime)"
          >
            Expiration Time
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="grid-row-alternate"
        >
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <a
              className="ws-pre-wrap"
              href="/labkey/testContainer/experiment-showData.view?rowId=41426"
            >
              DMEXP
            </a>
          </td>
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <span
              className="ws-pre-wrap"
            />
          </td>
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <a
              className="ws-pre-wrap"
              href="/labkey/testContainer/list-details.view?listId=15&pk=2"
            >
              Solution
            </a>
          </td>
          <td
            style={
              {
                "textAlign": "right",
              }
            }
          >
            <span
              className="ws-pre-wrap"
            >
              30
            </span>
          </td>
        </tr>
        <tr
          className="grid-row"
        >
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <a
              className="ws-pre-wrap"
              href="/labkey/testContainer/experiment-showData.view?rowId=41425"
            >
              TBS
            </a>
          </td>
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <span
              className="ws-pre-wrap"
            />
          </td>
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <a
              className="ws-pre-wrap"
              href="/labkey/testContainer/list-details.view?listId=15&pk=2"
            >
              Solution
            </a>
          </td>
          <td
            style={
              {
                "textAlign": "right",
              }
            }
          >
            <span
              className="ws-pre-wrap"
            >
              30
            </span>
          </td>
        </tr>
        <tr
          className="grid-row-alternate"
        >
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <a
              className="ws-pre-wrap"
              href="/labkey/testContainer/experiment-showData.view?rowId=41424"
            >
              PBS
            </a>
          </td>
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <span
              className="ws-pre-wrap"
            />
          </td>
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <a
              className="ws-pre-wrap"
              href="/labkey/testContainer/list-details.view?listId=15&pk=2"
            >
              Solution
            </a>
          </td>
          <td
            style={
              {
                "textAlign": "right",
              }
            }
          >
            <span
              className="ws-pre-wrap"
            >
              30
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`PreviewGrid render PreviewGrid with different numCols and numRows 1`] = `
<div
  className="preview-grid"
>
  <p>
    Previewing first 2 rows and 2 of 5 columns.
  </p>
  <div
    className="table-responsive"
  >
    <div
      className="grid-messages"
    />
    <table
      className="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            className="grid-header-cell"
            draggable={false}
            id="Name"
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              {
                "minWidth": undefined,
              }
            }
            title="Contains a short name for this data object
If not provided, a unique name will be generated from the expression:
null (Name)"
          >
            Name
          </th>
          <th
            className="grid-header-cell"
            draggable={false}
            id="Flag"
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              {
                "minWidth": undefined,
              }
            }
            title="Contains a reference to a user-editable comment about this row (Flag)"
          >
            Flag
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="grid-row-alternate"
        >
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <a
              className="ws-pre-wrap"
              href="/labkey/testContainer/experiment-showData.view?rowId=41426"
            >
              DMEXP
            </a>
          </td>
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <span
              className="ws-pre-wrap"
            />
          </td>
        </tr>
        <tr
          className="grid-row"
        >
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <a
              className="ws-pre-wrap"
              href="/labkey/testContainer/experiment-showData.view?rowId=41425"
            >
              TBS
            </a>
          </td>
          <td
            style={
              {
                "textAlign": "left",
              }
            }
          >
            <span
              className="ws-pre-wrap"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
